Added the ability for Java projects to have a test module rather than patching the main module. This allows tests to truly test what the main module will be like in production.